# JentleMemes-Launcher

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CUSTOM_PACKS_FORMAT.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  structure.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: arch-pacman-pkg.yml  ci.yml
Installer/installer/: package.json
docs/: ARCHITECTURE.md  GUIDE.md  LAUNCH_INTERNALS.md  MIGRATION_SVELTE5.md  SERVER-SSH.md  SVELTE_MIGRATION.md  TZ-LAUNCHER-API.md  UI_GUIDE.md  fluxcore-v3-blueprint.md  server-ssh-jentlememes.md
installer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
installer-stub/: stub.nsi
installer/src/: App.svelte  App.tsx  index.css  main.ts  main.tsx
installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: installer.rs  lib.rs  main.rs
main launcher/: CUSTOM_PACKS_FORMAT.md  README.md  package-lock.json  package.json  vite.config.ts
main launcher/scripts/: build-windows.sh
main launcher/src/: App.tsx  Titlebar.tsx
main launcher/src-tauri/: tauri.conf.json
packaging/aur/: AUR.md  jentlememes-launcher.desktop
scripts/: build-launcher-news.mjs  deploy-web-backend.example.sh  ensure-linuxdeploy.sh  fetch-webview2-loader.sh  package-linux-artifacts.sh  package-linux-release-tarball.sh  tauri-build.sh
src/: App.css  App.svelte  App.tsx  IngameOverlay.svelte  OnboardingWizard.svelte  SplashScreen.svelte  Titlebar.svelte  Titlebar.tsx  index.css  main.ts  main.tsx  themes.ts  version.ts
src-tauri/: Cargo.toml  Info.plist  custom_packs.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  custom_packs.rs  custom_packs_url.rs  error.rs  main.rs
src-tauri/src/commands/: backgrounds.rs  window.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: api.rs  auth.rs  authlib_injector.rs  curseforge.rs  discord_presence.rs  instance.rs  java.rs  mod.rs  modrinth.rs  mods.rs  mrpack.rs  pack_export.rs  progress_emit.rs  servers.rs  task_signals.rs  types.rs  updater.rs
src-tauri/src/core/fluxcore/: arg_resolver.rs  asset_resolver.rs  auth_resolver.rs  chain_resolver.rs  conductor.rs  forge_resolver.rs  igniter.rs  ipc_limits.rs  java_resolver.rs  launch_cache.rs  lib_resolver.rs  long_path.rs  mod.rs  native_resolver.rs  pipe_reader.rs  process_guard.rs  storage.rs  url_guard.rs
src-tauri/src/core/fluxcore/v3/: bus.rs  coil.rs  gate.rs  mod.rs  plan.rs  runner.rs  strand.rs  types.rs
src-tauri/src/core/game/: install.rs  launch.rs  legacy_java_fixer.rs  mod.rs  overlay_target.rs  version_layout.rs
src-tauri/src/core/loader_meta/: cache.rs  concurrency.rs  fabric.rs  forge.rs  http.rs  installer_patch.rs  jentlewrapper.rs  lists.rs  liteloader.rs  mod.rs  modloader_alpha.rs  modloader_jar_merge.rs  neoforge.rs  quilt.rs  vanilla_mc.rs  version_sort.rs  xml_versions.rs
src-tauri/src/core/loader_meta/data/: liteloader.json  modloader.json
src-tauri/src/core/server_ping/: address.rs  mod.rs  motd.rs  slp.rs  srv.rs  varint.rs
src-tauri/src/core/utils/: atomic_fs.rs  download.rs  maven.rs  mod.rs  modlauncher.rs  path_guard.rs  system.rs  xml_meta.rs
src/components/: AnimatedSection.tsx  ChromeNavigation.svelte  CommandPalette.svelte  DiscoverSelect.svelte  FileBrowserModal.svelte  InternalBrowserModal.svelte  LoaderIcon.svelte  LoaderIcon.tsx  McChatNode.svelte  OverlayChatFeed.svelte  ServerMotdBlock.svelte  ServerPingFaces.svelte  SkinBody2D.svelte  SkinHeadAvatar.svelte
src/lib/: chromeLayout.test.ts  chromeLayout.ts  commandRegistry.ts  desktopNotification.ts  discoverHelpers.ts  downloadProgressStore.ts  ingameOverlayHotkey.ts  ingameOverlayToggle.ts  internalBrowser.ts  jmEvents.ts  jmOpenUrl.ts  libraryTabTypes.ts  libraryUtils.ts  localImageUrl.ts  mcVersionSort.test.ts  (+8 more)
web-backend/: download.html  requirements.txt
(+65 files in other folders)
