[package]
name = "jentlememes-launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }  # без дополнительных фич
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
sha1 = "0.10"
sysinfo = "0.30"
dirs = "5.0"
rfd = "0.14"
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2"
thiserror = "1.0"
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }
bytes = "1.0"
futures = "0.3"
quartz_nbt = "0.2"
