[package]
name = "jentlememes-installer"
version = "1.0.5-beta.1"
description = "JentleMemes Launcher Installer"
authors = ["RGYTshka, l1zxxx"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
zip = "0.6"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
mslnk = "0.1"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
